--- a/data/ui/MousePerspective.ui
+++ b/data/ui/MousePerspective.ui
@@ -120,7 +120,7 @@
       </object>
     </child>
     <child>
-      <object class="GtkButton">
+      <object class="GtkButton" id="button_commit">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">True</property>
